# stark

./: .travis.yml  LICENSE  Pipfile  README.md  conftest.py  contrib.md
api/: app.py  settings.py
api/blueprints/: conftest.py
api/blueprints/core/: bp.py  routes.py
api/blueprints/core/tests/: tests_bp_core.py
contrib/: env-sample
stark/backend/: Makefile  backend.dockerfile  docker-compose.yml  init.sql  main.py  pyproject.toml  requirements.txt
stark/backend/database/: db.py
stark/backend/settings/: base.py
