[tool.poetry]
name = "stark"
version = "0.1.0"
description = ""
authors = ["João Lugão <jlugao@flowcap.net>", "Riverfount <vicente.marcal@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.54.1"
uvicorn = "^0.11.3"
sqlalchemy = "^1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
